antex-rs/tui/src/status/snapshots/antex_tui__status__tests__status_snapshot_shows_refreshing_limits_notice.snap
---
source: tui/src/status/tests.rs
assertion_line: 1736
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────────────╮
│  >_ Antex (v0.153.4)                                                        │
│                                                                             │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date               │
│ information on rate limits and credits                                      │
│                                                                             │
│  Model:            gpt-5.1-codex-max (reasoning none, summaries auto)       │
│  Directory: [[workspace]]                                                   │
│  Permissions:      Custom (workspace with network access, Ask for approval) │
│  Agents.md:        <none>                                                   │
│                                                                             │
│  Token usage:      750 total  (500 input + 250 output)                      │
│  Context window:   100% left (750 used / 272K)                              │
│  5h limit:         [███████████░░░░░░░░░] 55% left (resets 08:24)           │
│  Weekly limit:     [██████████████░░░░░░] 70% left (resets 08:54)           │
╰─────────────────────────────────────────────────────────────────────────────╯
